2003-11-12  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add an --autostart option, and activate the Extract button if its
	specified.

	* src/sound-juicer.h:
	Declare the autostart variable.

	* src/sj-extracting.c:
	When autostarting, quit when we've finished.

2003-11-12  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Add an option so that no directories are created for the song.

2003-11-11  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Update for 0.5.7.

2003-11-11  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Clear the list store first when no CD is inserted. Appears to fix
	*many* bugs.

2003-11-10  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Remove the call to gst_init().

	* src/sj-main.c:
	Add the GStreamer popt table for --help coolness. Also cleanup the
	includes a little.

2003-11-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Make the "invalid encoder" dialog work...

2003-10-31  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Add GObject and GThread to the GLib compiler arguments.

	* test/mb-test.c
	Initialize threads, and remove the explicit CD-ROM set.

	* test/Makefile.am:
	Remove -lgobject-2.0 as GLIB_LIBS does that for us now.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Use "kB" and divide by 1000 to be correct with file sizes. Pointed
	out by Alexander Winston.  Also hide the dialogs when errors
	occur, and stop cleanup() crashing.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Define PKGDATADIR to DATADIR/sound-juicer.

	* src/sj-about.c:
	Fix the path to the funky orange. Spotted by Jordi Mallach.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add more comments, don't leak as much memory, and update the
	extract buttons as tracks are selected to be ripped.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Return an GError in create_directory_for(), and display error