@@ -1,5 +1,10 @@
 2003-11-12  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-about.c: 
+	Give the translators some credit.
+
+2003-11-12  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Add an --autostart option, and activate the Extract button if its
 	specified.
